[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/UbuntuBold150.tres" type="DynamicFont" id=1]
[ext_resource path="res://images/default2.png" type="Texture" id=2]
[ext_resource path="res://mocraAdventure/map_editor/script/Control.gd" type="Script" id=3]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=4]

[node name="MainNode" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -620.0
margin_bottom = -980.0
rect_min_size = Vector2( 1300, 100 )
script = ExtResource( 3 )

[node name="entityLabel" type="Label" parent="."]
margin_left = 25.0
margin_top = 10.0
margin_right = 227.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 1 )
text = "entity"

[node name="posLabel" type="Label" parent="."]
margin_left = 501.0
margin_top = 10.0
margin_right = 943.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 1 )
text = "pos (500;500)"

[node name="typeLabel" type="Label" parent="."]
margin_left = 998.0
margin_top = 10.0
margin_right = 1150.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 1 )
text = "type"

[node name="Button" type="Button" parent="."]
margin_left = 1209.0
margin_top = 24.0
margin_right = 1261.0
margin_bottom = 76.0
theme = ExtResource( 4 )
text = "X"

[node name="avatarTextureRect" type="TextureRect" parent="."]
margin_left = 348.0
margin_right = 448.0
margin_bottom = 100.0
texture = ExtResource( 2 )
expand = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
